Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Smartcard-pki by ramann</title>
+    <title>Smartcard PKI by ramann</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,16 +15,16 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Smartcard-pki</h1>
+        <h1>Smartcard PKI</h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/ramann/Smartcard-PKI">View the Project on GitHub <small>ramann/Smartcard-PKI</small></a></p>
+        <p class="view"><a href="https://github.com/ramann/smartcard-pki">View the Project on GitHub <small>ramann/smartcard-pki</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/ramann/Smartcard-PKI/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/ramann/Smartcard-PKI/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/ramann/Smartcard-PKI">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/ramann/smartcard-pki/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/ramann/smartcard-pki/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/ramann/smartcard-pki">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
